fixed error messages causing overflow scrollbars

--- a/src/common/components/controls/InputControl.scss
+++ b/src/common/components/controls/InputControl.scss
@@ -23,9 +23,6 @@
 	display: inline-block;
 	border-radius: 3px;
 	padding: 3px 5px;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
 	margin-top: 5px;
 	font-size: 11pt;
 }
